--- a/app/views/homes/about.html.erb
+++ b/app/views/homes/about.html.erb
@@ -1,5 +1,6 @@
 
-  <title>Bookers2Ver2</title><meta name="csrf-param" content="authenticity_token"><meta name="csrf-token" content="7/5UMGD35pXnd68H/ZxWfOT+/i/18i/AIWvQGfimpCLFNpfxXJm1PUG5xSxfMqYT2FmNyntvjRCYAAwaZtnjkg=="><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link type="text/css" rel="stylesheet" charset="UTF-8" href="https://translate.googleapis.com/translate_static/css/translateelement.css"></head>
+  <title>Bookers</title>
+  <meta name="csrf-param" content="authenticity_token"><meta name="csrf-token" content="7/5UMGD35pXnd68H/ZxWfOT+/i/18i/AIWvQGfimpCLFNpfxXJm1PUG5xSxfMqYT2FmNyntvjRCYAAwaZtnjkg=="><meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><link type="text/css" rel="stylesheet" charset="UTF-8" href="https://translate.googleapis.com/translate_static/css/translateelement.css"></head>
   <body>
     <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
