--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,16 +1,21 @@
-<
-
-<body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <meta name="csrf-param" content="authenticity_token"><meta name="csrf-token" content="7/5UMGD35pXnd68H/ZxWfOT+/i/18i/AIWvQGfimpCLFNpfxXJm1PUG5xSxfMqYT2FmNyntvjRCYAAwaZtnjkg==">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  </head>
+  <body>
     <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
       <a class="navbar-brand" href="/"><span>Bookers</span></a>
-      <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="navbar-collapse collapse" id="navbarNavDropdown" style="">
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav ml-auto">
-          <li><a class="fas fa-home nav-link text-light" href="homes/">Home</a></li>
+          <li><a class="fas fa-home nav-link text-light" href="/"> Home</a></li>
           <li><a class="fas fa-link nav-link text-light" href="/homes/about"> About</a></li>
           <li><a class="fas fa-user-plus nav-link text-light" href="/users/sign_up"> sign up</a></li>
           <li><a class="fas fa-sign-in-alt nav-link text-light" href="/users/sign_in"> login</a></li>
@@ -19,8 +24,8 @@
     </div>
   </nav>
 </header>
-      <main>
-        <p id="notice"></p>
+    <main>
+      <p id="notice"></p>
         <div class="container">
   <div class="row">
     <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
@@ -39,9 +44,9 @@
     </div>
   </div>
 </div>
-
-
-      </main>
+    </main>
+  </body>
+</html>
     <footer>
   <div class="container mt-5">
   	<div class="row">
@@ -53,5 +58,3 @@
 </footer>
 
 
-
-</body>
