--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,12 +1,19 @@
   <h2>User info</h2>
-  <%= image_tag('no_image.jpg') %>
+  <table class='table'>
+     <tr><%= image_tag('no_image.jpg') %></tr>
+      <tr>
+    	<th>name</th>
+    	<th><%= @user.name %></th>
+      </tr>
+      <tr>
+         <th>introduction</th>
+         <th><%= @user.introduction %>
+  <% if @user.id == current_user.id %></th>
+      </tr>
+  </table>
+  <div class='row'></div>
   <div class="profile-container">
-  <h3 class="profile-name">
- 	<th>name</th><%= @user.name %>
-  </h3>
-  <h3 class="profile-introduction">
-  <th>introduction</th><%= @user.introduction %>
-  <% if @user.id == current_user.id %>
+  <a class="profile-introduction">
     <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
   <% end %>
  </div>
@@ -15,14 +22,21 @@
     <%= attachment_image_tag @current_user, :profile_image, :fill, 100, 100, format: 'jpeg' %>
   <% end %>
  </div>
+ </table>
  <p id="notice"><%= notice %></p>
 
 
- <h1>NEW BOOK</h1>
+ <h2 class="mt-3">New book</h2>
  <%= form_with model:@book, local:true do |f| %>
-  <h4>Title</h4>
-  <%= f.text_field :title %>
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
-  <%= f.submit 'CreateBook' %>
+ <div class="form-group">
+  <label for="book_title">Title</label>
+   <p><%= f.text_field :title %></p>
+ </div>
+ <div class="form-group">
+   <label for="book_opinion">Opinion</label>
+    <p><%= f.text_area :body %></p>
+ </div>
+  <div class="form-group">
+    <%= f.submit 'CreateBook' %>
+  </div>
  <% end %>
