--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,47 @@
-<%= render 'users/list', users: @users %>
-<h1>Books 2</h1>
-
-
+<html>
+<%= render 'homes/list', homes: @homes %>
+<main>
+ <p id="notice"></p>
+   <div class='container px-5 px-sm-0'>
+    <div class='row'>
+     <div class='col-md-3'>
+       <%= render 'users/list', users: @users %>
+     </div>
+<div class='col-md-8 offeset -md-1'>
+<h1>Books</h1>
+ <table class='table table-hover table-inverse'>
   <thead>
-    <tr>
-       <% @books.each do |book| %>
-       <td><%= link_to "/users/" do %> 
-           <%= image_tag ('no_image.jpg') %>
-           <% end %>
+     <tr>
+       <th></th>
        <th>Title</th>
        <th>Opinion</th>
-         <td><%=link_to book.title, "/books/#{@user.id}" %></td>
-         <td><%=@book.body %>
-         </td>
-         <th colspan= "3"></th>
-        <% end %>
-    </tr>
+       <th colspan="3"></th>
+     </tr>
   </thead>
+  <tbody>
+      <tr>
+       <% @books.each do |book| %>
+        <td><a><%= link_to "/users/" do %>
+           <%= image_tag ('no_image.jpg') %></a>
+           </td><% end %>
+         <td><a><%=link_to book.title, "/books/#{@user.id}" %></a></td>
+         <td><%=@book.body %></td>
+        <% end %>
+     </tr>
+  </tbody>
+ </table>
+</div>
+</main>
+  <footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
+ </body>
+</html>
+
 
