--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,44 @@
-<%= render 'users/list', users: @users %>
-
-<h2>Books</h2>
- <tbody>
+<!DOCTYPE html>
+<html>
+ <%= render 'homes/list', home: @home %>
+<main>
+ <p id="notice"></p>
+   <div class='container px-5 px-sm-0'>
+    <div class='row'>
+     <div class='col-md-3'>
+       <%= render 'users/list', user: @user %>
+     </div>
+<div class='col-md-8 offeset -md-1'>
+ <h2>Books</h2>
+ <table class='table table-hover table-inverse'>
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Opinion</th>
+      <th colspan="3"></th>
+    </tr>
+   </thead>
+   <tbody>
+     <% @books.each do |book| %>
      <tr>
-        <%= image_tag('no_image.jpg') "/users/" %>
-        <td><%=link_to @book.title, "/books/" %></td>
-        <td><%=@book.body %></td>
+       <td><%= image_tag('no_image.jpg') %></td>
+       <td><%=link_to book.title, book_path(book.id) %></td>
+       <td><%= book.body %></td>
      </tr>
- </tbody>
+     <% end %>
+   </tbody>
+  </table>
+   </main>
+    <footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
+
+  </body>
+</html>
