--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,11 +1,10 @@
 <html>
-<%= render 'homes/list', homes: @homes %>
+<%= render 'homes/list', home: @home %>
 <main>
- <p id="notice"></p>
-   <div class='container px-5 px-sm-0'>
+   　<div class='container px-5 px-sm-0'>
     <div class='row'>
      <div class='col-md-3'>
-       <%= render 'users/list', users: @users %>
+       <%= render 'users/list', user: @user %>
      </div>
 <div class='col-md-8 offeset -md-1'>
  <h2>Book detail</h2>
