--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -3,23 +3,23 @@
      <tr><%= image_tag('no_image.jpg') %></tr>
       <tr>
     	<th>name</th>
-    	<th><%= @user.name %></th>
+    	<th><%= user.name %></th>
       </tr>
       <tr>
          <th>introduction</th>
-         <th><%= @user.introduction %>
-  <% if @user.id == current_user.id %></th>
+         <th><%= user.introduction %>
+  <% if user.id == current_user.id %></th>
       </tr>
   </table>
   <div class='row'></div>
   <div class="profile-container">
   <a class="profile-introduction">
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+    <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
   <% end %>
  </div>
  <div>
-  <%= link_to user_path(@user.id) do %>
-    <%= attachment_image_tag @current_user, :profile_image, :fill, 100, 100, format: 'jpeg' %>
+  <%= link_to user_path(user.id) do %>
+    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg' %>
   <% end %>
  </div>
  </table>
