--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,22 @@
-<h2>プロフィール編集</h2>
-<%= form_with model:@user, local:true do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <%= attachment_image_tag @user, :profile_image, :fill, 60, 60, fallback: "no_image.jpg"%>
-  <label for="inputImage">ProfileImage</label>
-  <%= f.submit "変更を保存" %>
+ <main>
+
+        <div class='container'>
+  <div class='row'>
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h2>User info</h2>
+    <%= form_with model:@profile_image, local:true do |f| %>
+    <div class="form-group">
+     <label for="user_name">Name</label>
+     <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+    </div>
+    <div class="form-group">
+      <label for="user_image">Image</label>
+     <%= attachment_image_tag @book, :profile_image, :fill, 60, 60, format: 'jpeg' %>
+    </div>
+   <div class="form-group">
+        <label for="user_introduction">Introduction</label>
+        <textarea class="form-control introduction" name="user[introduction]" id="user_introduction">
+</textarea>
+   </div>
 <% end %>
 
