バリテーション,user info

--- a/app/views/homes/_list.html.erb
+++ b/app/views/homes/_list.html.erb
@@ -17,7 +17,7 @@
           <li><a class="fas fa-home nav-link text-light" href="/"> Home</a></li>
           <li><a class="fas fa-link nav-link text-light" href="/users/">Users</a></li>
           <li><a class="fas fa-user-plus nav-link text-light" href="/books/">Books</a></li>
-          <li><a class="fas fa-sign-in-alt nav-link text-light" href="/users/sign_out">logout</a></li>
+          <li><a class="fas fa-sign-in-alt nav-link text-light" data-method="delete" href="/users/sign_out">logout</a></li>
         </ul>
       </div>
     </div>
