--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
 <html>
 <%= render 'homes/list', home: @home %>
 <main>
-<p id="notice">Welcome! You have signed up </p>
+<p id="notice"></p>
    <div class='container px-5 px-sm-0'>
     <div class='row'>
      <div class='col-md-3'>
