--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,7 +6,7 @@
   <div class='row'>
 <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 <h1>Editing Book</h1>
-<%= form_with model:p, url:"/books/#{@book.id}", local:true do |f| %>
+<%= form_with model:@book, local: true do |f| %>
  <div class="form-group">
     <label for="book_title">Title</label>
   </div>
