--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,10 @@
 <html>
+ <head>
+  <meta charset="UTF-8" />
+  <script src="https://kit.fontawesome.com/01a0f06759.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+</head>
 <%= render 'homes/list', home: @home %>
 <main>
    　<div class='container px-5 px-sm-0'>
@@ -22,8 +28,8 @@
        </td>
        <td><%=link_to @book.title, "/books/#{@book.id}" %></td>
        <td><%=@book.body %></td>
-       <td><%= link_to 'Edit', edit_book_path(@book) %></td>
-       <td><%= link_to 'Destroy', @book , method: :delete, data: { confirm: 'Are you sure?' } %></td>
+       <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_35605" %></td>
+       <td><%= link_to 'Destroy', @book , method: :delete, class: "btn btn-sm btn-danger destroy_book_35570", data: { confirm: 'Are you sure?' } %></td>
     </tr>
  </tbody>
 </html>
