--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,7 +1,20 @@
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <script src="https://kit.fontawesome.com/01a0f06759.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
+</head> 
+<main>
+ <p id="notice"><%= notice %></p>
+ <div class="container px-5 px-sm-0"></div>
+ <div class="row"></div>
+ <div class="col-md-3"></div>
   <h2>User info</h2>
-  <table class='table'>
      <tr><%= image_tag('no_image.jpg') %></tr>
-      <tr>
+     <table class='table'>
+      <tbody>
+      <tr></tr>
     	<th>name</th>
     	<th><%= user.name %></th>
       </tr>
@@ -10,21 +23,13 @@
          <th><%= user.introduction %>
   <% if user.id == current_user.id %></th>
       </tr>
+    </tbody>
   </table>
-  <div class='row'></div>
-  <div class="profile-container">
-  <a class="profile-introduction">
-    <p><%= link_to "プロフィール編集", edit_user_path(user) %></p>
+  <div class='row'>
+   <%=link_to edit_user_path, @user, class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+  </div>
   <% end %>
- </div>
- <div>
-  <%= link_to user_path(user.id) do %>
-    <%= attachment_image_tag current_user, :profile_image, :fill, 100, 100, format: 'jpeg' %>
-  <% end %>
- </div>
- </table>
- <p id="notice"><%= notice %></p>
-
+ 
 
  <h2 class="mt-3">New book</h2>
  <%= form_with model:@book, local:true do |f| %>
@@ -37,6 +42,8 @@
     <p><%= f.text_area :body %></p>
  </div>
   <div class="form-group">
-    <%= f.submit 'CreateBook' %>
+    <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
   </div>
  <% end %>
+</html>
+ 
