--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,22 +1,43 @@
+ <html>
+<%= render 'homes/list', homes: @homes %>
  <main>
 
-        <div class='container'>
+  <div class='container'>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>User info</h2>
-    <%= form_with model:@profile_image, local:true do |f| %>
-    <div class="form-group">
-     <label for="user_name">Name</label>
-     <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-    </div>
-    <div class="form-group">
-      <label for="user_image">Image</label>
-     <%= attachment_image_tag @book, :profile_image, :fill, 60, 60, format: 'jpeg' %>
-    </div>
-   <div class="form-group">
-        <label for="user_introduction">Introduction</label>
-        <textarea class="form-control introduction" name="user[introduction]" id="user_introduction">
-</textarea>
-   </div>
+    <%= form_with model:@user, local:true do |f| %>
+   <div class="field">
+	<%= f.label :name %></br>
+	<%= f.text_field :name, class: "name" %>
+</div>
+
+<div class="field">
+	<%= f.label :image %></br>
+	<%= f.attachment_field :profile_image, class: "user_image" %>
+</div>
+
+<div class="field">
+	<%= f.label :introduction %></br>
+	<%= f.text_area :introduction, class: "introduction" %>
+</div>
+
+<div class="actions">
+	<%= f.submit %>
+</div>
+
 <% end %>
+</main>
+
+ <footer>
+  <div class='container mt-5'>
+  	<div class='row'>
+    	<div class='mx-auto'>
+    		<p>CopyRight Infratop.inc</p>
+    	</div>
+    </div>
+  </div>
+</footer>
+
+</html>
 
