--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,6 +6,12 @@
   <div class='row'>
 <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 <h1>Editing Book</h1>
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>
+  <% @book.errors.full_messages.each do |message| %>error prohibited this obj from being saved
+    <%= message %>
+  <% end %>
+<% end %>
 <%= form_with model:@book, local: true do |f| %>
  <div class="form-group">
     <label for="book_title">Title</label>
