--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -25,8 +25,11 @@
       </tr>
     </tbody>
   </table>
-  <div class='row'>
-   <%=link_to edit_user_path, @user, class: "btn btn-outline-secondary btn-block fas fa-user-cog" %>
+  <div class='row-4'>
+   <%= link_to edit_user_path(user) do %>
+   <div class= "btn btn-outline-secondary btn-block fas fa-user-cog" >
+   </div>
+   <% end %>
   </div>
   <% end %>
  
