--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -19,7 +19,7 @@
 
 <div class="field">
 	<%= f.label :introduction %></br>
-	<%= f.text_area :introduction, class: "introduction" %>
+	<%= f.text_area :introduction, :maxlength => 200, class: "introduction" %>
 </div>
 
 <div class="actions">
