--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -14,7 +14,7 @@
 
 <div class="field">
 	<%= f.label :image %></br>
-	<%= f.attachment_field :profile_image, class: "user_image" %>
+	<%= f.attachment_field :profile_image_id, class: "profile_image_id" %>
 </div>
 
 <div class="field">
