--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,12 @@
-<!DOCTYPE html>
-<html>
- <%= render 'homes/list', home: @home %>
 <main>
  <p id="notice"></p>
    <div class='container px-5 px-sm-0'>
     <div class='row'>
      <div class='col-md-3'>
-       <%= render 'users/list', user: @user %>
+       <%= render 'layouts/error_messages', model: @book %>
+       <%= render 'users/list', user: current_user, book: @book %>
      </div>
-<div class='col-md-8 offeset -md-1'>
+<div class='col-md-8 offset-md-1'>
  <h2>Books</h2>
  <table class='table table-hover table-inverse'>
   <thead>
@@ -22,7 +20,7 @@
    <tbody>
      <% @books.each do |book| %>
      <tr>
-       <td><%= image_tag('no_image.jpg') %></td>
+       <td><%=link_to image_tag(src= 'no_image.jpg', class: @user), user_path(book.user) %></br>
        <td><%= link_to book.title, book_path(book.id) %></td>
        <td><%= book.body %></td>
      </tr>
@@ -40,5 +38,3 @@
   </div>
 </footer>
 
-  </body>
-</html>
