--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,9 @@
+<main>
+    <p id="notice"></p>
+ <div class='container'>
+    <div class='row'>
+      <div class= "col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0">
 <h2>Sign up</h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
  
@@ -25,10 +29,11 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+  
+  <button type="submit" class="btn btn-sm btn-success">Sign Up</button>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+ </div>
+  </div>
