--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,43 +1,30 @@
-<html>
-<head>
-  <meta charset="UTF-8" />
-  <script src="https://kit.fontawesome.com/01a0f06759.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="reset.css">
-  <link rel="stylesheet" href="style.css">
-</head> 
-<main>
- <p id="notice"><%= notice %></p>
- <div class="container px-5 px-sm-0"></div>
- <div class="row"></div>
- <div class="col-md-3"></div>
-  <h2>User info</h2>
-     <tr><%= image_tag('no_image.jpg') %></tr>
+<h2>User info</h2>
+     <%= image_tag('no_image.jpg') %>
      <table class='table'>
       <tbody>
-      <tr></tr>
     	<th>name</th>
     	<th><%= user.name %></th>
-      </tr>
       <tr>
          <th>introduction</th>
-         <th><%= user.introduction %>
-  <% if user.id == current_user.id %></th>
+         <th><%= user.introduction %></th>
       </tr>
     </tbody>
   </table>
   <div class='row-4'>
+  <!--< if user.id == current_user.id %>-->
    <%= link_to edit_user_path(user) do %>
    <div class= "btn btn-outline-secondary btn-block fas fa-user-cog" >
    </div>
    <% end %>
+  <%# end %>
   </div>
-  <% end %>
- 
+
+
 
  <h2 class="mt-3">New book</h2>
- <%= form_with model:@book, local:true do |f| %>
+ <%= form_with model: book, local:true do |f| %>
  <div class="form-group">
-  <label for="book_title">Title</label>
+   <label for="book_title">Title</label>
    <p><%= f.text_field :title %></p>
  </div>
  <div class="form-group">
@@ -48,5 +35,3 @@
     <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book" />
   </div>
  <% end %>
-</html>
- 
