--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,12 +1,9 @@
- <html>
-<%= render 'homes/list', homes: @homes %>
- <main>
-
-  <div class='container'>
+ <div class='container'>
+  <%= render 'layouts/error_messages', model: @user %>
   <div class='row'>
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>User info</h2>
-    <%= form_with model:@user, local:true do |f| %>
+    <%= form_with model: @user, local:true do |f| %>
    <div class="field">
 	<%= f.label :name %></br>
 	<%= f.text_field :name, class: "name" %>
@@ -14,7 +11,7 @@
 
 <div class="field">
 	<%= f.label :image %></br>
-	<%= f.attachment_field :profile_image_id, class: "profile_image_id" %>
+	<%= f.attachment_field :profile_image, class: "profile_image_id" %>
 </div>
 
 <div class="field">
@@ -23,7 +20,7 @@
 </div>
 
 <div class="actions">
-	<%= f.submit %>
+ <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User">
 </div>
 
 <% end %>
@@ -38,6 +35,4 @@
     </div>
   </div>
 </footer>
-
-</html>
 
