--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,15 +1,14 @@
-<html>
-<%= render 'homes/list', home: @home %>
-<main>
+ <main>
  <p id="notice"></p>
    <div class='container px-5 px-sm-0'>
     <div class='row'>
      <div class='col-md-3'>
-       <%= render 'users/list', user: @user %>
+      <%= render 'users/list', user: @user, book: @book %>
      </div>
-  <div class='col-md-8 offeset -md-1'>
+  <div class= "col-md-8 offset-md-1">
  <h2>Users</h2>
- <table class='table table-hover table-inverse'>
+ <table class="table">
+  <thead>
      <tr>
        <th>image</th>
        <th>name</th>
@@ -21,16 +20,17 @@
     <tr>
        <td><%= image_tag('no_image.jpg') %></td>
        <td><%= user.name %></td>
-       <td><%= link_to 'Show', user_path(@user) %></td>
+       <td><%= link_to 'Show', user_path(user) %></td>
     </tr>
     <% end %>
- </tbody>
-  </table>
+  </tbody>
+ </table>
   
     </div>
   </div>
 </div>
-      </main>
+</main>
+
     <footer>
   <div class='container mt-5'>
   	<div class='row'>
@@ -41,5 +41,3 @@
   </div>
 </footer>
 
-  </body>
-</html>
