--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html>
-<%= render 'homes/list', home: @home %>
 <main>
-<p id="notice"></p>
    <div class='container px-5 px-sm-0'>
     <div class='row'>
      <div class='col-md-3'>
-       <%= render 'users/list', user: @user %>
+       <%= render 'users/list', user: @user, book: @book %>
      </div>
-<div class='col-md-8 offeset -md-1'>
-<h1>Books</h1>
- <table class='table table-hover table-inverse'>
+<div class='col-md-8 offset-md-1'>
+<h2>Books</h2>
+ <table class="table">
   <thead>
      <tr>
        <th></th>
@@ -22,7 +18,7 @@
   <tbody>
      <% @books.each do |book| %>
      <tr>
-        <td><%= image_tag ('no_image.jpg') %><a>
+        <td><%=link_to image_tag(src= 'no_image.jpg', class: @user), user_path(@user) %></br>
         <td><%=link_to book.title, book_path(book.id) %></td>
         <td><%= book.body %></td>
      </tr>
@@ -30,6 +26,8 @@
    </thead>
   </tbody>
  </table>
+  </div>
+  </div>
 </div>
 </main>
   <footer>
@@ -41,7 +39,6 @@
     </div>
   </div>
 </footer>
- </body>
-</html>
+
 
 
