--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
   
-  <button type="submit" class="btn btn-sm btn-success">Sign Up</button>
+  <button type="submit" class="btn btn-sm btn-success">Sign up</button>
 <% end %>
 
 <%= render "devise/shared/links" %>
