--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -11,7 +11,7 @@
     </tbody>
   </table>
   <div class='row-4'>
-  <!--< if user.id == current_user.id %>-->
+  <%#if user.id == current_user.id %>
    <%= link_to edit_user_path(user) do %>
    <div class= "btn btn-outline-secondary btn-block fas fa-user-cog" >
    </div>
